--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-2009-07-29 Daigo Moriwaki <daigo at debian dot org>
+2009-08-06 Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
 	  - A experimental new feature, codenamed Buoy: it allows players to
@@ -26,7 +26,7 @@
 	      ex. %%DELETEBUOY buoy_foo-900-0
 	      - game_name is the buoy game name that was created.
 	    + %%GETBUOYCOUNT <game_name>
-	      Show a current count of the buoy game or zero for non-existing
+	      Show a current count of the buoy game or -1 for non-existing
 	      games.
 
 
