--- a/changelog
+++ b/changelog
@@ -1,3 +1,15 @@
+2009-11-08 Daigo Moriwaki <daigo at debian dot org>
+
+	* [mk_rate]
+	  - Split a pre-process collecting game results from csa files into
+	    a new command, mk_game_results. Now, Generating players.html
+	    requires two steps as follows:
+	      % ./mk_game_results dir_of_csa_files > 00list
+	      % ./mk_rate 00list > players.html
+	      or
+	      % ./mk_game_results dir_of_csa_files | ./mk_rate > players.html 
+	    (Closes: #19454)
+
 2009-08-06 Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
