--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+2009-11-11 Daigo Moriwaki <daigo at debian dot org>
+
+	* [mk_rate]
+	  - Added a new command line option: --base-date. You can specify a
+	    base date to calculate rating scores. Games in the `future' are
+	    ignored for the calculation.
+
 2009-11-10 Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
@@ -10,7 +17,7 @@
 	       % ./mk_game_results dir_of_csa_files > 00LIST
 	    2. Run the server. It appends a result of each game to
 	       '00LIST' when the game finishes.
-	    3. From the list of game results, calcurate rating scores of
+	    3. From the list of game results, calculate rating scores of
 	       players.
 	       % ./mk_rate 00LIST > players.yaml
 
