--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+2009-12-04 Daigo Moriwaki <daigo at debian dot org>
+	* [shogi-server]
+	  - The HUP signal is not supported by Ruby on Windows.
+
 2009-11-11 Daigo Moriwaki <daigo at debian dot org>
 
 	* [mk_rate]
