--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2010-07-25  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - shogi_server/command.rb: For an unknown error command log, an
+	    empty line is no longer logged.
+
 2010-07-23  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
