../shogi_server.rb, ../shogi_server/util.rb: Refactored mkdir_for to Mkdir.mkdir_for.

--- a/changelog
+++ b/changelog
@@ -6,6 +6,8 @@
 	    earlier than system time.
 	  - shogi_server/league/floodgate_thread.rb: SetupFloodgate#start
 	    now returns an instance correctly.
+	  - ../shogi_server.rb, ../shogi_server/util.rb: Refactored
+	    mkdir_for to Mkdir.mkdir_for.
 
 2010-07-25  Daigo Moriwaki <daigo at debian dot org>
 
