Added shogi-server-profile to take profile of shogi-server.

--- a/changelog
+++ b/changelog
@@ -4,6 +4,7 @@
 	  - shogi_server/board.rb, piece.rb: Refactoring to cache OU pieces,
 	    which was inspired by 81SquareShogi-server's change
 	    (74b24b88c843f1dd767412475b117481d1d5e8eb).
+	  - Added shogi-server-profile to take profile of shogi-server.
 	* [mk_rate] [mk_game_results]
 	  - Supports Ruby 1.9.3.
 
