--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2012-01-06  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - test/TC_logger.rb depeneded on a specific directory where it was
+	    running on. This issues has been fixed.
+
 2011-12-18  Daigo Moriwaki <daigo at debian dot org>
 
 	* [sohgi-server]
