--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+2012-01-07  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - Added shogi_server/compatible.rb, which implements compatible
+	    methods and allows Ruby 1.8.7 to run the server.
+	  - test/TC_floodgate.rb failed with Ruby 1.8.7. This issue has
+	    been fixed.
+
 2012-01-06  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
