--- a/changelog
+++ b/changelog
@@ -5,6 +5,8 @@
 	    methods and allows Ruby 1.8.7 to run the server.
 	  - test/TC_floodgate.rb failed with Ruby 1.8.7. This issue has
 	    been fixed.
+	  - test/TC_uchifuzume.rb did not run with Ruby 1.8.7. This issue
+	    has been fixed.
 
 2012-01-06  Daigo Moriwaki <daigo at debian dot org>
 
