--- a/changelog
+++ b/changelog
@@ -7,6 +7,8 @@
 	    been fixed.
 	  - test/TC_uchifuzume.rb did not run with Ruby 1.8.7. This issue
 	    has been fixed.
+	  - test/TC_league.rb failed with Ruby 1.8.7. This issue has been
+	    fixed.
 
 2012-01-06  Daigo Moriwaki <daigo at debian dot org>
 
