--- a/changelog
+++ b/changelog
@@ -9,6 +9,8 @@
 	    has been fixed.
 	  - test/TC_league.rb failed with Ruby 1.8.7. This issue has been
 	    fixed.
+	* README:
+	  - Both Ruby 1.9.3 and 1.8.7 are supported.
 
 2012-01-06  Daigo Moriwaki <daigo at debian dot org>
 
