--- a/changelog
+++ b/changelog
@@ -31,7 +31,7 @@
 
 2011-12-18  Daigo Moriwaki <daigo at debian dot org>
 
-	* [sohgi-server]
+	* [shogi-server]
 	  - shogi_server/board.rb, piece.rb: Refactoring to cache OU pieces,
 	    which was inspired by 81SquareShogi-server's change
 	    (74b24b88c843f1dd767412475b117481d1d5e8eb).
@@ -90,9 +90,9 @@
 
 	* [shogi-server]
 	  - shogi_server/{board,command,game,league,player}.rb
-	    The Buoy behaivor is changed.
+	    The Buoy behavior is changed.
 	    + Starting a buoy game, players are notified a starting game
-	      position with the initial position and moves, instread of a
+	      position with the initial position and moves, instead of a
 	      targeting position.
 	    + Players are allowed to start buoy games with specific turns.
 	      ex. %%GAME buoy_foo-1500-0 +
@@ -145,7 +145,7 @@
 	* [shogi-server]
 	  - shogi_server.rb, shogi_server/board.rb, shogi_server/move.rb
 	    - Refactoring: Board can now move_to() and move_back() a move
-	      instread of deep_copy().
+	      instead of deep_copy().
 
 2010-07-11  Daigo Moriwaki <daigo at debian dot org>
 
@@ -167,12 +167,12 @@
 	    .
 	    Note: Without this option, no floodgate games are started. If
 	    you want floodgate-900-0 to run, which was default enabled in
-	    previous versions, you need to spefify the game name in this new
+	    previous versions, you need to specify the game name in this new
 	    option.
 	  - Floodgate time configuration file:
 	    You need to set starting times of floodgate groups in
-	    configuration files under the top directory. Each floodgat
-	    e group requires a correspoding configuration file named
+	    configuration files under the top directory. Each floodgate
+	    group requires a corresponding configuration file named
 	    "<game_name>.conf". The file will be re-read once just after a
 	    game starts. 
 	    .
@@ -180,7 +180,7 @@
 	    floodgate-3600-30.conf.  However, for floodgate-900-0 and
 	    floodgate-3600-0, which were default enabled in previous
 	    versions, configuration files are optional if you are happy with
-	    defualt time settings.
+	    default time settings.
 	    File format is:
 	      Line format: 
 	        # This is a comment line
@@ -244,7 +244,7 @@
 2010-02-27  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
-	  - The server now provides more accurate time control. Previouslly,
+	  - The server now provides more accurate time control. Previously,
 	    a player's thinking time included a time waiting to get the giant
 	    lock. This may have caused games to time up, especially, during
 	    byo-yomi etc.
@@ -293,7 +293,7 @@
 
 	* [shogi-server]
 	  - shogi-server: The command line option --floodgate-history has
-	    been deprectated. The server will decide history file names such
+	    been deprecated. The server will decide history file names such
 	    as 'floodgate_history_900_0.yaml' and
 	    'floodgate_history_3600_0.yaml', and then put them in the top
 	    directory.
@@ -303,11 +303,11 @@
 	* [shogi-server]
 	  - shogi_server/player.rb: Added new methods: is_human? and
 	    is_computer?. 
-	    A human player is recommened to use a name ending with '_human'.  
+	    A human player is recommended to use a name ending with '_human'.  
 	    ex. 'hoge_human', 'hoge_human@p1'
 	  - shogi_server/pairing.rb: Added a new class:
 	    StartGameWithoutHumans, which tries to make pairs trying to
-	    avoid a human-human match. This is now enabled instread of the
+	    avoid a human-human match. This is now enabled instead of the
 	    previous class: StartGame.
 	  - shogi-server, shogi_server/league/floodgate.rb:
 	    Changed the argument of Floodgate.new.
@@ -331,7 +331,7 @@
 	    which will be used to generate players.yaml. If the file does
 	    not exist, the server will create one automatically.
 	    Instruction to use the game result list file:
-	    1. Make a list of game results from exisiting CSA files with
+	    1. Make a list of game results from existing CSA files with
 	       mk_game_results
 	       % ./mk_game_results dir_of_csa_files > 00LIST
 	    2. Run the server. It appends a result of each game to
@@ -367,7 +367,7 @@
 	      - game_name is a valid game name with a prefix "buoy_".
 	      ex. buoy_foo-900-0
 	      - moves are initial moves from the Hirate position to a
-	      spcific position that you want to start with.
+	      specific position that you want to start with.
 	      ex. +7776FU-3334FU+8786FU
 	      - count is an optional attribute to tell how many times the
 	      game can be played (default 1). The count is decremented
@@ -392,7 +392,7 @@
 2009-06-18 Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
-	  - An emtpy floodgate_history.yaml caused a server error. This
+	  - An empty floodgate_history.yaml caused a server error. This
 	    issue has been fixed. 
 	    (Closes: #15124)
 
@@ -473,7 +473,7 @@
 
 	* [mk_html]
 	  - Added a new option: --footer filename, which inserts contents of 
-	    the filename at the bottom of a genrated page. A text specific to 
+	    the filename at the bottom of a generated page. A text specific to 
 	    wdoor should be written by using this option. 
 	    (Closes: #14470)
 	  - It does no more depend on RDoc. RDoc::usage does not work well
@@ -496,9 +496,9 @@
 
 	* [shogi-server]
 	  - Improved an existance check and etc. of directories specified
-	    by command line options, expecially in case of the daemon mode. 
+	    by command line options, especially in case of the daemon mode. 
 	    (Closes: #14244)
-	  - A lotated log file is moved to $topdir/YYYY/MM/DD.
+	  - A rotated log file is moved to $topdir/YYYY/MM/DD.
 	    (Closes: #14245)
 
 2008-11-27 Daigo Moriwaki <daigo at debian dot org>
@@ -609,7 +609,7 @@
 
 	* [shogi-server]
 	  - .csa files will be located in a sub directory such as
-	    "2008/05/05/*.csa". Thease days, we have many games in a day. 
+	    "2008/05/05/*.csa". These days, we have many games in a day. 
 	    This change will help users browse a file list.
 
 2008-05-03 Daigo Moriwaki <daigo at debian dot org>
