--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+2012-12-30  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - Backported a5c94012656902e73e00f46e7a4c7004b24d4578:
+	    test/TC_logger.rb depeneded on a specific directory where it was
+	    running on. This issues has been fixed.
+
 2012-12-28  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
