--- a/changelog
+++ b/changelog
@@ -4,6 +4,11 @@
 	  - Backported a5c94012656902e73e00f46e7a4c7004b24d4578:
 	    test/TC_logger.rb depeneded on a specific directory where it was
 	    running on. This issues has been fixed.
+	  - Backported 87d145bd1f1a14a33f5f6fbc78b63a1952f1ca90 and
+	    2df8c798aeb7f0e77735e893fd1370c2c6f15c4d:
+	    shogi_server/floodgate.rb: Generating next time around the new
+	    year day by reading configuration files did not work correctly.
+	    This issue has been fixed.
 
 2012-12-28  Daigo Moriwaki <daigo at debian dot org>
 
