--- a/changelog
+++ b/changelog
@@ -1,3 +1,22 @@
+2013-02-23  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - New command: %%FORK <source_game> <new_buoy_game> [<nth-move>]
+	    Fork a new game from the posistion where the n-th (starting from
+	    one) move of a source game is played. The new game should be a
+	    valid buoy game name. The default value of n is the position
+	    where the previous position of the last one.
+	    - The objective of this command: The shogi-server may be used as
+	    the back end server of computer-human match where a human player
+	    plays with a real board and someone, or a proxy, inputs moves to
+	    the shogi-server. If the proxy happens to enter a wrong move,
+	    with this command you can restart a new buoy game from the
+	    previous stable position.
+	    ex. %%FORK server-denou-14400-60+p1+p2+20130223185013 buoy_denou-14400-60
+	    - Note that this feature does not provice accurate thinking
+	    time estimate. The thinking time of the last posision is carried
+	    over to the new game regardless nth-move.
+
 2012-12-30  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
