--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@
 	    The new_buoy_game parameter is now optional. If it is not
 	    supplied, Shogi-server generates a new buoy game name from
 	    source_game.
+	  - command.rb: More elaborate error messages for the %%GAME command.
 
 2013-02-23  Daigo Moriwaki <daigo at debian dot org>
 
