--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2013-11-04  Daigo Moriwaki <daigo at debian dot org>
+
+	* [mk_rate]
+	  - Added a new option, --ignore, which is imported from
+	    mk_rate-from-grep.
+
 2013-09-08  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server]
