--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@
 	    mk_rate-from-grep.
 	* [mk_game_results]
 	  - Flush after each output line.
+	* Rleased: Revision "20131104"
 
 2013-09-08  Daigo Moriwaki <daigo at debian dot org>
 
