--- a/changelog
+++ b/changelog
@@ -2,6 +2,8 @@
 
 	* [mk_rate]
 	  - gsl library may be provided as a gem
+	* test/TC_floodgate.rb
+	  - Improved randomness check so that it works on Ruby 2.0.0 as well
 
 2013-11-04  Daigo Moriwaki <daigo at debian dot org>
 
