--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+2013-11-24  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server]
+	  - shogi_server/league/floodgate.rb: Improved robustness against
+	    empty file under ruby 1.9.3p194
+
 2013-11-23  Daigo Moriwaki <daigo at debian dot org>
 
 	* [mk_rate]
