* [mk_game_results] - Fixed for reading Japanese comments under ruby1.9.3p194.

--- a/changelog
+++ b/changelog
@@ -3,6 +3,8 @@
 	* [shogi-server]
 	  - shogi_server/league/floodgate.rb: Improved robustness against
 	    empty file under ruby 1.9.3p194
+	* [mk_game_results]
+	  - Fixed for reading Japanese comments under ruby1.9.3p194.
 
 2013-11-23  Daigo Moriwaki <daigo at debian dot org>
 
