* [shogi-server] - shogi-server: Previously, reloading in daemon mode failed on ruby 1.9.3p194. This issue has been fixed.

--- a/changelog
+++ b/changelog
@@ -3,6 +3,8 @@
 	* [shogi-server]
 	  - shogi_server/league/floodgate.rb: Improved robustness against
 	    empty file under ruby 1.9.3p194
+	  - shogi-server: Previously, reloading in daemon mode failed on
+	    ruby 1.9.3p194. This issue has been fixed.
 	* [mk_game_results]
 	  - Fixed for reading Japanese comments under ruby1.9.3p194.
 
